[metadata]
name = esu_cli
description = Everyday script utilities (CLI) to simplify the tedious tasks with automation
long_description = file: README.rst, LICENSE
author = Stephen Gemin
author_email = sgemin88@gmail.com
home_page = https://github.com/SGEMIN1/ecu-cli
license = Apache
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/SGEMIN1/ecu-cli/issues
    Source Code = https://github.com/SGEMIN1/ecu-cli
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    click

[options.extras_require]
dev =
    black

zip_safe = False
include_package_data = True
packages = find:

[bdist_wheel]
universal = 1

[bdist_egg]
exclude_source_files = 1

[devpi:upload]
formats = bdist_wheel
